<resources>
    <string name="app_name">太湖水污染</string>
    <string name="action_settings">Settings</string>
    <string name="project_name">无锡太湖水污染防治</string>
    <!-- Strings related to login -->
    <string name="prompt_name">账户 (必填)</string>
    <string name="prompt_password">密码 (必填)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">登 录</string>
    <string name="main">首页</string>
    <string name="query">综查</string>
    <string name="office">办公</string>
    <string name="visit">巡视</string>

    <string name="bluealgae">蓝藻湖泛</string>
    <string name="drinksafe">饮水安全</string>
    <string name="riverquality">河道水质</string>
    <string name="satellite">卫星遥感</string>
    <string name="transferWater">调水引流</string>
    <string name="weather">气象水文</string>


    <string name="shazhu">沙渚(环保局)</string>
    <string name="xidong">锡东水厂(环保局)</string>
    <string name="jc_time">监测时间:</string>
    <string name="shuiliju">水利局</string>
    <string name="qixiangju">气象局</string>


    <string name="NH3">氨氮(mg/L)</string>
    <string name="TN">总氮(mg/L)</string>
    <string name="TP">总磷(mg/L)</string>
    <string name="algae">藻密度(万个/升)</string>
    <string name="NAWQA">水质评价(类)</string>
    <string name="PH">PH</string>
    <string name="DO">溶解氧(mg/L)</string>

    <string name="jc_time_value">监测时间</string>

</resources>
