<?xml version="1.0" encoding="utf-8"?>
<!--饮水安全-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:myradio="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
    <include android:id="@+id/includeTitle"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        layout="@layout/title_view_option" />
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >
        <!--root first -->
        <LinearLayout
            android:id="@+id/root_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RelativeLayout
                    android:id="@+id/title_listView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <TextView
                        android:id="@+id/kindName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18dp"
                        android:textColor="#1af"
                        android:layout_marginLeft="15dp"
                        android:layout_alignParentLeft="true"
                        android:text="@string/shazhu"
                        android:gravity="center"
                        />
                    <TextView
                        android:id="@+id/SZ_time"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="21dp"
                        android:textColor="#1af"
                        android:text="____/__/__"
                        android:layout_marginRight="5dp"
                        android:layout_alignParentRight="true"
                        android:gravity="center"
                        />
                    <com.lake.waterlake.customcomponents.MenuRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/jc_time"
                        android:button="@null"
                        android:checked="true"
                        android:clickable="true"
                        android:layout_toLeftOf="@+id/SZ_time"
                        android:textSize="12dp"
                        myradio:drawableLeft="@drawable/clock_ico_2x"
                        myradio:selfdrawableSize="15dp"
                        android:gravity="center"
                        android:layout_marginRight="5dp"
                        />
                </RelativeLayout>
                <ListView
                    android:id="@+id/SZ_listView"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:horizontalSpacing="0.0dip"
                    android:scrollbars="none"
                    android:verticalSpacing="0.0dip"
                    android:layout_centerVertical="true"
                    android:layout_below="@+id/title_listView"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RelativeLayout
                    android:id="@+id/title_listView2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <TextView
                        android:id="@+id/kindName2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18dp"
                        android:textColor="#1af"
                        android:layout_marginLeft="15dp"
                        android:layout_alignParentLeft="true"
                        android:text="@string/xidong"
                        android:gravity="center"
                        />
                    <TextView
                        android:id="@+id/XD_time2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="21dp"
                        android:textColor="#1af"
                        android:text="____/__/__"
                        android:layout_marginRight="5dp"
                        android:layout_alignParentRight="true"
                        android:gravity="center"
                        />
                    <com.lake.waterlake.customcomponents.MenuRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/jc_time"
                        android:button="@null"
                        android:checked="true"
                        android:clickable="true"
                        android:layout_toLeftOf="@+id/XD_time2"
                        android:textSize="12dp"
                        myradio:drawableLeft="@drawable/clock_ico_2x"
                        myradio:selfdrawableSize="15dp"
                        android:gravity="center"
                        android:layout_marginRight="5dp"
                        />
                </RelativeLayout>
                <ListView
                    android:id="@+id/XD_listView2"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:horizontalSpacing="0.0dip"
                    android:scrollbars="none"
                    android:verticalSpacing="0.0dip"
                    android:layout_centerVertical="true"
                    android:layout_below="@+id/title_listView2"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>